# MLOps-project-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: ci-cd.yml
ci-cd/github-actions/: mlops-pipeline.yml
ci-cd/scripts/: build_and_push_docker.sh  run_lint.sh  run_tests.sh
configs/: config.yaml  logging.yaml  params.yaml
docker/: Dockerfile.serving  Dockerfile.training  docker-compose.yml
experiment_tracking/metadata/: README.md
experiment_tracking/mlflow/: mlflow_config.yaml
infrastructure/k8s/: deployment.yaml  ingress.yaml  service.yaml
infrastructure/terraform/: main.tf  variables.tf
monitoring/grafana/dashboards/: model_dashboard.json
monitoring/prometheus/: prometheus.yml
notebooks/: exploration.ipynb
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: evaluate_model.py  predict_model.py  train_model.py
src/monitoring/: data_drift_monitor.py  model_performance_monitor.py
src/pipelines/: training_pipeline.py
src/serving/: api.py
src/utils/: io.py
tests/e2e/: test_api_e2e.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_train_model.py
