[metadata]
name = mlops-skeleton-project
version = 0.1.0
description = A skeleton project for MLOps with essential tools and Docker support.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/mlops-skeleton-project
license = MIT

[options]
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    flask
    mlflow
    dvc
    pydantic
    requests
    prometheus_client
    tensorflow  # or pytorch, depending on your model
    # Add other dependencies as needed

[options.packages.find]
exclude =
    tests
    notebooks
    .github
    ci-cd
    infrastructure
    monitoring
    experiment_tracking
    docker
    data

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*